Added simulated annealing algorithm #923
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3098 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Algorithms.SimulatedAnnealing/3.3/HeuristicLab.Algorithms.SimulatedAnnealing-3.3.csproj
+++ b/sources/HeuristicLab.Algorithms.SimulatedAnnealing/3.3/HeuristicLab.Algorithms.SimulatedAnnealing-3.3.csproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <Compile Include="HeuristicLabAlgorithmsSimulatedAnnealingPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimulatedAnnealing.cs" />
     <Compile Include="SimulatedAnnealingMainLoop.cs" />
   </ItemGroup>
   <ItemGroup>
