--- a/sources/HeuristicLab.Algorithms.LocalSearch/3.3/HeuristicLab.Algorithms.LocalSearch-3.3.csproj
+++ b/sources/HeuristicLab.Algorithms.LocalSearch/3.3/HeuristicLab.Algorithms.LocalSearch-3.3.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{4AE3FC69-C575-42D2-BC46-0FAD5850EFC5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HeuristicLab.Algorithms.LS</RootNamespace>
-    <AssemblyName>HeuristicLab.Algorithms.LS-3.3</AssemblyName>
+    <RootNamespace>HeuristicLab.Algorithms.LocalSearch</RootNamespace>
+    <AssemblyName>HeuristicLab.Algorithms.LocalSearch-3.3</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
@@ -79,14 +79,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HeuristicLabAlgorithmsLSPlugin.cs" />
-    <Compile Include="LSMainLoop.cs" />
+    <Compile Include="HeuristicLabAlgorithmsLocalSearchPlugin.cs" />
+    <Compile Include="LocalSearchMainLoop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="LS.cs" />
+    <Compile Include="LocalSearch.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
-    <None Include="HeuristicLabAlgorithmsLSPlugin.cs.frame" />
+    <None Include="HeuristicLabAlgorithmsLocalSearchPlugin.cs.frame" />
     <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <ItemGroup>
@@ -154,6 +154,6 @@ set SolutionDir=$(SolutionDir)
 set Outdir=$(Outdir)
 
 call PreBuildEvent.cmd
-SubWCRev "%25ProjectDir%25\" "%25ProjectDir%25\HeuristicLabAlgorithmsLSPlugin.cs.frame" "%25ProjectDir%25\HeuristicLabAlgorithmsLSPlugin.cs"</PreBuildEvent>
+SubWCRev "%25ProjectDir%25\" "%25ProjectDir%25\HeuristicLabAlgorithmsLocalSearchPlugin.cs.frame" "%25ProjectDir%25\HeuristicLabAlgorithmsLocalSearchPlugin.cs"</PreBuildEvent>
   </PropertyGroup>
 </Project>
