Continued to implement TSP tour visualization (#924)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3107 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
+++ b/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
@@ -85,7 +85,9 @@
   <ItemGroup>
     <None Include="HeuristicLabOptimizationPlugin.cs.frame" />
     <Compile Include="Algorithm.cs" />
-    <Compile Include="Interfaces\ISolutionVisualizer.cs" />
+    <Compile Include="Interfaces\IMultiObjectiveSolutionsVisualizer.cs" />
+    <Compile Include="Interfaces\ISingleObjectiveSolutionsVisualizer.cs" />
+    <Compile Include="Interfaces\ISolutionsVisualizer.cs" />
     <Compile Include="Interfaces\IDiscreteDoubleValueModifier.cs" />
     <Compile Include="Interfaces\IExhaustiveMoveGenerator.cs" />
     <Compile Include="Interfaces\IMoveOperator.cs" />
