--- a/sources/HeuristicLab.PluginInfrastructure/Properties/Settings.settings
+++ b/sources/HeuristicLab.PluginInfrastructure/Properties/Settings.settings
@@ -9,16 +9,16 @@
       <Value Profile="(Default)">-</Value>
     </Setting>
     <Setting Name="UpdateLocation" Type="System.String" Scope="User">
-      <Value Profile="(Default)">http://servdev.heuristiclab.com/Deployment/Update.svc</Value>
+      <Value Profile="(Default)">http://servdev.heuristiclab.com/Deployment-3.3/Update.svc</Value>
     </Setting>
     <Setting Name="UpdateLocationUserName" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">anonymous</Value>
     </Setting>
     <Setting Name="UpdateLocationPassword" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">GetTheLab!</Value>
     </Setting>
     <Setting Name="UpdateLocationAdministrationAddress" Type="System.String" Scope="User">
-      <Value Profile="(Default)">http://servdev.heuristiclab.com/Deployment/Admin.svc</Value>
+      <Value Profile="(Default)">http://servdev.heuristiclab.com/Deployment-3.3/Admin.svc</Value>
     </Setting>
   </Settings>
 </SettingsFile>
