Further implemented review comments (#916)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3115 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.OneMax/3.3/HeuristicLab.Problems.OneMax-3.3.csproj
+++ b/sources/HeuristicLab.Problems.OneMax/3.3/HeuristicLab.Problems.OneMax-3.3.csproj
@@ -85,6 +85,7 @@
     <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IOneMaxSolutionsVisualizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Evaluators\OneMaxEvaluator.cs" />
     <Compile Include="HeuristicLabProblemsOneMaxPlugin.cs" />
