--- a/sources/HeuristicLab.Encodings.BinaryVectorEncoding/3.3/HeuristicLab.Encodings.BinaryVectorEncoding-3.3.csproj
+++ b/sources/HeuristicLab.Encodings.BinaryVectorEncoding/3.3/HeuristicLab.Encodings.BinaryVectorEncoding-3.3.csproj
@@ -101,15 +101,15 @@
     <Compile Include="Interfaces\IBinaryVectorMoveOperator.cs" />
     <Compile Include="Manipulators\SomePositionsBitflipManipulator.cs" />
     <Compile Include="Manipulators\SinglePositionBitflipManipulator.cs" />
+    <Compile Include="Moves\OneBitflipMove\ExhaustiveOneBitflipMoveGenerator.cs" />
+    <Compile Include="Moves\OneBitflipMove\OneBitflipMove.cs" />
+    <Compile Include="Moves\OneBitflipMove\OneBitflipMoveGenerator.cs" />
+    <Compile Include="Moves\OneBitflipMove\OneBitflipMoveMaker.cs" />
+    <Compile Include="Moves\OneBitflipMove\OneBitflipTabuMoveMaker.cs" />
+    <Compile Include="Moves\OneBitflipMove\PreventOneBitflipTabuMoveEvaluator.cs" />
+    <Compile Include="Moves\OneBitflipMove\StochasticOneBitflipMultiMoveGenerator.cs" />
+    <Compile Include="Moves\OneBitflipMove\StochasticOneBitflipSingleMoveGenerator.cs" />
     <Compile Include="Moves\OneIndexMove.cs" />
-    <Compile Include="Moves\SingleBitflipMove\ExhaustiveOneBitflipMoveGenerator.cs" />
-    <Compile Include="Moves\SingleBitflipMove\OneBitflipMove.cs" />
-    <Compile Include="Moves\SingleBitflipMove\OneBitflipMoveMaker.cs" />
-    <Compile Include="Moves\SingleBitflipMove\OneBitflipMoveGenerator.cs" />
-    <Compile Include="Moves\SingleBitflipMove\PreventOneBitflipTabuMoveEvaluator.cs" />
-    <Compile Include="Moves\SingleBitflipMove\StochasticOneBitflipSingleMoveGenerator.cs" />
-    <Compile Include="Moves\SingleBitflipMove\StochasticOneBitflipMultiMoveGenerator.cs" />
-    <Compile Include="Moves\SingleBitflipMove\OneBitflipTabuMoveMaker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
