--- a/sources/HeuristicLab.Problems.OneMax/3.3/HeuristicLab.Problems.OneMax-3.3.csproj
+++ b/sources/HeuristicLab.Problems.OneMax/3.3/HeuristicLab.Problems.OneMax-3.3.csproj
@@ -86,6 +86,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\IOneMaxSolutionsVisualizer.cs" />
+    <Compile Include="Interfaces\IOneMaxMoveEvaluator.cs" />
+    <Compile Include="MoveEvaluators\OneMaxMoveEvaluator.cs" />
+    <Compile Include="MoveEvaluators\OneMaxOneBitflipMoveEvaluator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Evaluators\OneMaxEvaluator.cs" />
     <Compile Include="HeuristicLabProblemsOneMaxPlugin.cs" />
