Added MoveEvaluator to the Knapsack problem (#917)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3124 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.Knapsack/3.3/HeuristicLab.Problems.Knapsack-3.3.csproj
+++ b/sources/HeuristicLab.Problems.Knapsack/3.3/HeuristicLab.Problems.Knapsack-3.3.csproj
@@ -84,7 +84,10 @@
     <Compile Include="HeuristicLabProblemsKnapsackPlugin.cs" />
     <Compile Include="Interfaces\IKnapsackEvaluator.cs" />
     <Compile Include="Interfaces\IKnapsackSolutionsVisualizer.cs" />
+    <Compile Include="Interfaces\IKnapsackMoveEvaluator.cs" />
     <Compile Include="Knapsack.cs" />
+    <Compile Include="MoveEvaluators\KnapsackMoveEvaluator.cs" />
+    <Compile Include="MoveEvaluators\KnapsackOneBitflipMoveEvaluator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
