--- a/sources/HeuristicLab.Core.Views/3.3/HeuristicLab.Core.Views-3.3.csproj
+++ b/sources/HeuristicLab.Core.Views/3.3/HeuristicLab.Core.Views-3.3.csproj
@@ -86,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLabCoreViewsPlugin.cs.frame" />
+    <Compile Include="ControlExtensions.cs" />
     <Compile Include="VariableValueView.cs">
       <SubType>UserControl</SubType>
     </Compile>
