Renamed TSP to !TravelingSalesmanProblem and TSPView to !TravelingSalesmanProblemView (#924).
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3159 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.TravelingSalesman.Views/3.3/HeuristicLab.Problems.TravelingSalesman.Views-3.3.csproj
+++ b/sources/HeuristicLab.Problems.TravelingSalesman.Views/3.3/HeuristicLab.Problems.TravelingSalesman.Views-3.3.csproj
@@ -91,17 +91,17 @@
     <Compile Include="PathTSPTourView.Designer.cs">
       <DependentUpon>PathTSPTourView.cs</DependentUpon>
     </Compile>
+    <Compile Include="TravelingSalesmanProblemView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TravelingSalesmanProblemView.Designer.cs">
+      <DependentUpon>TravelingSalesmanProblemView.cs</DependentUpon>
+    </Compile>
     <Compile Include="TSPLIBImportDialog.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="TSPLIBImportDialog.Designer.cs">
       <DependentUpon>TSPLIBImportDialog.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TSPView.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="TSPView.Designer.cs">
-      <DependentUpon>TSPView.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
