--- a/sources/HeuristicLab.Problems.OneMax.Views/3.3/HeuristicLab.Problems.OneMax.Views-3.3.csproj
+++ b/sources/HeuristicLab.Problems.OneMax.Views/3.3/HeuristicLab.Problems.OneMax.Views-3.3.csproj
@@ -86,11 +86,11 @@
     <None Include="HeuristicLabProblemsOneMaxViewsPlugin.cs.frame" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="OneMaxView.cs">
+    <Compile Include="OneMaxProblemView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="OneMaxView.Designer.cs">
-      <DependentUpon>OneMaxView.cs</DependentUpon>
+    <Compile Include="OneMaxProblemView.Designer.cs">
+      <DependentUpon>OneMaxProblemView.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HeuristicLabProblemsOneMaxViewsPlugin.cs" />
