--- a/sources/HeuristicLab.Problems.OneMax/3.3/HeuristicLab.Problems.OneMax-3.3.csproj
+++ b/sources/HeuristicLab.Problems.OneMax/3.3/HeuristicLab.Problems.OneMax-3.3.csproj
@@ -89,11 +89,11 @@
     <Compile Include="Interfaces\IOneMaxMoveEvaluator.cs" />
     <Compile Include="MoveEvaluators\OneMaxMoveEvaluator.cs" />
     <Compile Include="MoveEvaluators\OneMaxOneBitflipMoveEvaluator.cs" />
+    <Compile Include="OneMaxProblem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Evaluators\OneMaxEvaluator.cs" />
     <Compile Include="HeuristicLabProblemsOneMaxPlugin.cs" />
     <Compile Include="Interfaces\IOneMaxEvaluator.cs" />
-    <Compile Include="OneMax.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\HeuristicLab.Collections\3.3\HeuristicLab.Collections-3.3.csproj">
