Renamed Knapsack to KnapsackProblem and KnapsackView to KnapsackProblemView (#917)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3166 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.Knapsack.Views/3.3/HeuristicLab.Problems.Knapsack.Views-3.3.csproj
+++ b/sources/HeuristicLab.Problems.Knapsack.Views/3.3/HeuristicLab.Problems.Knapsack.Views-3.3.csproj
@@ -82,13 +82,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HeuristicLabProblemsKnapsackViewsPlugin.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="KnapsackView.cs">
+    <Compile Include="KnapsackProblemView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="KnapsackView.Designer.cs">
-      <DependentUpon>KnapsackView.cs</DependentUpon>
+    <Compile Include="KnapsackProblemView.Designer.cs">
+      <DependentUpon>KnapsackProblemView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
