Moved extension methods of Control from HeuristicLab.Core.Views to HeuristicLab.!MainForm.!WindowsForms and suspended/resumed repainting in some controls to improve UI response times (#887).
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3177 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.MainForm.WindowsForms/3.2/HeuristicLab.MainForm.WindowsForms-3.2.csproj
+++ b/sources/HeuristicLab.MainForm.WindowsForms/3.2/HeuristicLab.MainForm.WindowsForms-3.2.csproj
@@ -92,6 +92,7 @@
       <DependentUpon>ContentView.cs</DependentUpon>
     </Compile>
     <None Include="HeuristicLabMainFormWindowsFormsPlugin.cs.frame" />
+    <Compile Include="ControlExtensions.cs" />
     <Compile Include="DockForm.cs">
       <SubType>Form</SubType>
     </Compile>
